2007-09-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun.el (toplevel): Add a new slot `url-coding-system' to
	`shimbun' class.
	(shimbun-retrieve-url): Accept an argument `url-coding-system', which
	specifiies the coding system for escaping non-ASCII characters included
	in the given URL.
	(shimbun-fetch-url): Refer the above slot when calling
	`shimbun-retrieve-url'.
	(shimbun-mime-replace-image-tags): Add an argument `shimbun' to use
	`shimbun-fetch-url' instead of `shimbun-retrieve-url'.
	(shimbun-make-mime-article): Follow the above change.

	* sb-multi.el (shimbun-multi-retrieve-next-pages): Follow the above
	change.

2007-09-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el: Rewrite.

2007-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-kantei-x-face-alist): Add new default face.

2007-09-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* nnshimbun.el (gnus-summary-refer-shimbun-article): Returns the
	`w3m-goto-url' symbol when it fails fetching articles.
	Cf. [emacs-w3m:09660]

2007-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-clear-contents): "&#012" -> "&#012;".

	* sb-kantei.el (shimbun-kantei-groups): Add m-magazine-en.abe,
	m-magazine-ja.abe, m-magazine-en.koizumi groups.
	(shimbun-index-url, shimbun-from-address, shimbun-get-headers):
	Likewise.
	(shimbun-kantei-content-start, shimbun-kantei-content-end): Abolish.
	(shimbun-kantei-x-face-alist): Move the default face into Abe's; make
	the default face empty temporarily.
	(shimbun-clear-contents): Rewrite.
	(shimbun-make-contents): New method function that choose face according
	to author.

	* shimbun.el (shimbun-end-of-tag): Enable it to search for the end of
	current tag as well.

2007-09-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-shimbun.el (mew-shimbun-goto-folder): Use mapc instead of mapcar.

2007-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-clear-contents): Remove useless timesselect
	stuff.
